--- a/pyperplan_tutorial.ipynb
+++ b/pyperplan_tutorial.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "           '(unloaded robr)'})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "frozenset({'(in contb loc1)', '(loaded robr conta)'})"
       ]
      },
      "execution_count": 13,
@@ -269,7 +269,7 @@
     }
    ],
    "source": [
-    "task.goal_reached(task.initial_state)"
+    "task.goals"
    ]
   },
   {
@@ -280,32 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "[(<Op (move robq loc2 loc1)>,\n",
-       "  frozenset({'(atl robq loc1)',\n",
-       "             '(atl robr loc1)',\n",
-       "             '(in conta loc1)',\n",
-       "             '(in contb loc2)',\n",
-       "             '(unloaded robq)',\n",
-       "             '(unloaded robr)'})),\n",
-       " (<Op (move robr loc1 loc2)>,\n",
-       "  frozenset({'(atl robq loc2)',\n",
-       "             '(atl robr loc2)',\n",
-       "             '(in conta loc1)',\n",
-       "             '(in contb loc2)',\n",
-       "             '(unloaded robq)',\n",
-       "             '(unloaded robr)'})),\n",
-       " (<Op (load loc1 conta robr)>,\n",
-       "  frozenset({'(atl robq loc2)',\n",
-       "             '(atl robr loc1)',\n",
-       "             '(in contb loc2)',\n",
-       "             '(loaded robr conta)',\n",
-       "             '(unloaded robq)'})),\n",
-       " (<Op (load loc2 contb robq)>,\n",
-       "  frozenset({'(atl robq loc2)',\n",
-       "             '(atl robr loc1)',\n",
-       "             '(in conta loc1)',\n",
-       "             '(loaded robq contb)',\n",
-       "             '(unloaded robr)'}))]"
+       "False"
       ]
      },
      "execution_count": 14,
@@ -314,7 +289,52 @@
     }
    ],
    "source": [
-    "task.get_successor_states(task.initial_state)"
+    "task.goal_reached(task.initial_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<Op (move robr loc1 loc2)>,\n",
+       "  frozenset({'(atl robq loc2)',\n",
+       "             '(atl robr loc2)',\n",
+       "             '(in conta loc1)',\n",
+       "             '(in contb loc2)',\n",
+       "             '(unloaded robq)',\n",
+       "             '(unloaded robr)'})),\n",
+       " (<Op (move robq loc2 loc1)>,\n",
+       "  frozenset({'(atl robq loc1)',\n",
+       "             '(atl robr loc1)',\n",
+       "             '(in conta loc1)',\n",
+       "             '(in contb loc2)',\n",
+       "             '(unloaded robq)',\n",
+       "             '(unloaded robr)'})),\n",
+       " (<Op (load loc2 contb robq)>,\n",
+       "  frozenset({'(atl robq loc2)',\n",
+       "             '(atl robr loc1)',\n",
+       "             '(in conta loc1)',\n",
+       "             '(loaded robq contb)',\n",
+       "             '(unloaded robr)'})),\n",
+       " (<Op (load loc1 conta robr)>,\n",
+       "  frozenset({'(atl robq loc2)',\n",
+       "             '(atl robr loc1)',\n",
+       "             '(in contb loc2)',\n",
+       "             '(loaded robr conta)',\n",
+       "             '(unloaded robq)'}))]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task.get_successor_states(frozenset(task.initial_state))"
    ]
   },
   {
