added basic gym env and made emb into class

--- a/pyperplan_tutorial.ipynb
+++ b/pyperplan_tutorial.ipynb
@@ -339,6 +339,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<Op (move robr loc1 loc2)>,\n",
+       "  frozenset({'(atl robq loc2)',\n",
+       "             '(atl robr loc2)',\n",
+       "             '(in conta loc1)',\n",
+       "             '(in contb loc2)',\n",
+       "             '(unloaded robq)',\n",
+       "             '(unloaded robr)'})),\n",
+       " (<Op (move robq loc2 loc1)>,\n",
+       "  frozenset({'(atl robq loc1)',\n",
+       "             '(atl robr loc1)',\n",
+       "             '(in conta loc1)',\n",
+       "             '(in contb loc2)',\n",
+       "             '(unloaded robq)',\n",
+       "             '(unloaded robr)'})),\n",
+       " (<Op (load loc2 contb robq)>,\n",
+       "  frozenset({'(atl robq loc2)',\n",
+       "             '(atl robr loc1)',\n",
+       "             '(in conta loc1)',\n",
+       "             '(loaded robq contb)',\n",
+       "             '(unloaded robr)'})),\n",
+       " (<Op (load loc1 conta robr)>,\n",
+       "  frozenset({'(atl robq loc2)',\n",
+       "             '(atl robr loc1)',\n",
+       "             '(in contb loc2)',\n",
+       "             '(loaded robr conta)',\n",
+       "             '(unloaded robq)'}))]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task.get_successor_states(task.initial_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
