Added script for running node2vec
-Added notebook for evaluting node2vec embedding dot products
against actual distances between nodes

-Added README to describe project structure and explain the role of
some of the scripts

-Added notebook to create a networkx graph from a pddl problem
by performing a BFS. This is then stored in an edge list format
which is what node2vec expects

--- a/get_problem_files.ipynb
+++ b/get_problem_files.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "domain = \"transport\"\n",
+    "domain = \"logistics\"\n",
     "path = os.path.join(\"pddl_files\", domain)\n",
     "\n",
     "if not os.path.exists(path):\n",
@@ -49,64 +49,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{u'description': u'(opt11) Each vehicle can transport some packages depending on its capacity and moving has a cost depending on the length of the road. Picking up or dropping a package costs 1.',\n",
-       "  u'domain_id': 13,\n",
-       "  u'domain_name': u'transport',\n",
-       "  u'tags': u'[\":action-costs\",\":typing\"]'},\n",
-       " {u'description': u'(opt14) Each vehicle can transport some packages depending on its capacity and moving has a cost depending on the length of the road. Picking up or dropping a package costs 1.',\n",
-       "  u'domain_id': 11,\n",
-       "  u'domain_name': u'transport',\n",
-       "  u'tags': u'[\":adl\",\":strips\",\":action-costs\",\":equality\",\":typing\"]'},\n",
-       " {u'description': u'(sat08) Each vehicle can transport some packages depending on its capacity and moving has a cost depending on the length of the road. Picking up or dropping a package costs 1.',\n",
-       "  u'domain_id': 51,\n",
-       "  u'domain_name': u'transport',\n",
-       "  u'tags': u'[\":adl\",\":strips\",\":action-costs\",\":equality\",\":typing\"]'},\n",
-       " {u'description': u'(sat14) Each vehicle can transport some packages depending on its capacity and moving has a cost depending on the length of the road. Picking up or dropping a package costs 1.',\n",
-       "  u'domain_id': 118,\n",
-       "  u'domain_name': u'transport',\n",
+       "[{u'description': u'This is a subset of the problems from the logistics benchmark in IPC-2000.',\n",
+       "  u'domain_id': 129,\n",
+       "  u'domain_name': u'logistics00-reduced',\n",
+       "  u'tags': u'[\":adl\",\":strips\",\":conditional-effects\",\":action-costs\",\":derived-predicates\",\":equality\",\":negative-preconditions\",\":quantified-precondition\",\":typing\"]'},\n",
+       " {u'description': u'There are several cities, each containing several locations, some of which are airports. There are also trucks, which can drive within a single city, and airplanes, which can fly between airports. The goal is to get some packages from various locations to various new locations. This domain was created by Bart Selman and Henry Kautz, based on an earlier domain by Manuela Veloso.',\n",
+       "  u'domain_id': 38,\n",
+       "  u'domain_name': u'logistics',\n",
        "  u'tags': u'[\":adl\",\":strips\",\":conditional-effects\",\":action-costs\",\":derived-predicates\",\":equality\",\":negative-preconditions\",\":typing\"]'},\n",
-       " {u'description': u'(opt08) Each vehicle can transport some packages depending on its capacity and moving has a cost depending on the length of the road. Picking up or dropping a package costs 1.',\n",
-       "  u'domain_id': 57,\n",
-       "  u'domain_name': u'transport',\n",
-       "  u'tags': u'[\":adl\",\":strips\",\":conditional-effects\",\":action-costs\",\":derived-predicates\",\":equality\",\":negative-preconditions\",\":typing\"]'},\n",
-       " {u'description': u'(sat11) Each vehicle can transport some packages depending on its capacity and moving has a cost depending on the length of the road. Picking up or dropping a package costs 1.',\n",
-       "  u'domain_id': 6,\n",
-       "  u'domain_name': u'transport',\n",
-       "  u'tags': u'[\":adl\",\":strips\",\":conditional-effects\",\":action-costs\",\":derived-predicates\",\":equality\",\":negative-preconditions\",\":typing\"]'}]"
+       " {u'description': u'There are several cities, each containing several locations, some of which are airports. There are also trucks, which can drive within a single city, and airplanes, which can fly between airports. The goal is to get some packages from various locations to various new locations. This domain was created by Bart Selman and Henry Kautz, based on an earlier domain by Manuela Veloso.',\n",
+       "  u'domain_id': 43,\n",
+       "  u'domain_name': u'logistics',\n",
+       "  u'tags': u'[\":adl\",\":strips\",\":conditional-effects\",\":action-costs\",\":derived-predicates\",\":equality\",\":fluents\",\":negative-preconditions\",\":quantified-precondition\",\":typing\"]'}]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "domains = api.find_domains(\"transport\")\n",
+    "domains = api.find_domains(domain)\n",
     "domains"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "domain_id_list = []\n",
     "\n",
     "for domain in domains:\n",
-    "    if \"(sat\" in domain[\"description\"]:\n",
+    "    if \"(sat\" in domain[\"description\"] or not \"(opt\" in domain[\"description\"]:\n",
     "        domain_id_list.append(domain[\"domain_id\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +116,18 @@
     "        wget.download(problem_url, os.path.join(competition_path, problem_file))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (py2)",
+   "display_name": "py2",
    "language": "python",
    "name": "py2"
   },
@@ -146,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
