value iteration working

--- a/Debug Env.ipynb
+++ b/Debug Env.ipynb
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2,  4,  7, 11], dtype=int32)"
+       "array([ 1,  9, 11, 12], dtype=int32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,37 +79,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'(at package-1 city-loc-1)',\n",
-       " '(at package-1 city-loc-2)',\n",
-       " '(at package-1 city-loc-3)',\n",
-       " '(at package-1 truck-1)',\n",
-       " '(at package-2 city-loc-1)',\n",
-       " '(at package-2 city-loc-2)',\n",
-       " '(at package-2 city-loc-3)',\n",
-       " '(at package-2 truck-1)',\n",
-       " '(at truck-1 city-loc-1)',\n",
-       " '(at truck-1 city-loc-2)',\n",
-       " '(at truck-1 city-loc-3)',\n",
-       " '(capacity truck-1 capacity-0)',\n",
-       " '(capacity truck-1 capacity-1)',\n",
-       " '(capacity truck-1 capacity-2)',\n",
-       " '(capacity truck-1 capacity-3)',\n",
-       " '(capacity truck-1 capacity-4)'}"
+       "array([10, 13], dtype=int32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.task.facts"
+    "env.E.state_to_emb(env.task.goals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(env.task.goal_reached(env.task.initial_state))-1"
    ]
   },
   {
@@ -121,119 +126,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2  4  7 11] [ 2  7  8 11] -1 0\n",
-      "[ 2  7  8 11] [ 2  4  7 11] -1 0\n",
-      "[ 2  4  7 11] [ 1  2  7 11] -1 0\n",
-      "[ 1  2  7 11] [ 2  4  7 11] -1 0\n",
-      "[ 2  4  7 11] [ 2  7  8 11] -1 0\n",
-      "[ 2  7  8 11] [ 2  4  7 11] -1 0\n",
-      "[ 2  4  7 11] [ 2  7  8 11] -1 0\n",
-      "[ 2  7  8 11] [ 2  4  7 11] -1 0\n",
-      "[ 2  4  7 11] [ 1  2  7 11] -1 0\n",
-      "[ 1  2  7 11] [ 1  2  6 14] -1 0\n",
-      "[ 1  2  6 14] [ 1  2  7 11] -1 0\n",
-      "[ 1  2  7 11] [ 1  2  6 14] -1 0\n",
-      "[ 1  2  6 14] [ 2  4  6 14] -1 0\n",
-      "[ 2  4  6 14] [ 2  6  8 14] -1 0\n",
-      "[ 2  6  8 14] [ 2  4  6 14] -1 0\n",
-      "[ 2  4  6 14] [ 1  2  6 14] -1 0\n",
-      "[ 1  2  6 14] [ 2  4  6 14] -1 0\n",
-      "[ 2  4  6 14] [ 2  6  8 14] -1 0\n",
-      "[ 2  6  8 14] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 2  6  8 14] -1 0\n",
-      "[ 2  6  8 14] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [0 3 6 8] -1 0\n",
-      "[0 3 6 8] [0 3 4 6] -1 0\n",
-      "[0 3 4 6] [0 1 3 6] -1 0\n",
-      "[0 1 3 6] [0 3 4 6] -1 0\n",
-      "[0 3 4 6] [0 3 6 8] -1 0\n",
-      "[0 3 6 8] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 1  5 11 15] -1 0\n",
-      "[ 1  5 11 15] [ 4  5 11 15] -1 0\n",
-      "[ 4  5 11 15] [ 5  8 11 15] -1 0\n",
-      "[ 5  8 11 15] [ 4  5 11 15] -1 0\n",
-      "[ 4  5 11 15] [ 1  5 11 15] -1 0\n",
-      "[ 1  5 11 15] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 4  5  9 11] -1 0\n",
-      "[ 4  5  9 11] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 1  5 11 15] -1 0\n",
-      "[ 1  5 11 15] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 1  5 11 15] -1 0\n",
-      "[ 1  5 11 15] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 1  5 11 15] -1 0\n",
-      "[ 1  5 11 15] [ 0  1  5 14] -1 0\n",
-      "[ 0  1  5 14] [ 0  4  5 14] -1 0\n",
-      "[ 0  4  5 14] [ 0  5  8 14] -1 0\n",
-      "[ 0  5  8 14] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 1  2  5 11] -1 0\n",
-      "[ 1  2  5 11] [ 2  4  5 11] -1 0\n",
-      "[ 2  4  5 11] [ 2  5  8 11] -1 0\n",
-      "[ 2  5  8 11] [ 2  6  8 14] -1 0\n",
-      "[ 2  6  8 14] [ 2  4  6 14] -1 0\n",
-      "[ 2  4  6 14] [ 1  2  6 14] -1 0\n",
-      "[ 1  2  6 14] [ 1  2  7 11] -1 0\n",
-      "[ 1  2  7 11] [ 1  2  6 14] -1 0\n",
-      "[ 1  2  6 14] [ 2  4  6 14] -1 0\n",
-      "[ 2  4  6 14] [ 1  2  6 14] -1 0\n",
-      "[ 1  2  6 14] [ 2  4  6 14] -1 0\n",
-      "[ 2  4  6 14] [ 2  4 11 13] -1 0\n",
-      "[ 2  4 11 13] [ 2  8 11 13] -1 0\n",
-      "[ 2  8 11 13] [ 0  8 13 14] -1 0\n",
-      "[ 0  8 13 14] [ 2  8 11 13] -1 0\n",
-      "[ 2  8 11 13] [ 0  8 13 14] -1 0\n",
-      "[ 0  8 13 14] [ 0  4 13 14] -1 0\n",
-      "[ 0  4 13 14] [ 0  1 13 14] -1 0\n",
-      "[ 0  1 13 14] [ 0  4 13 14] -1 0\n",
-      "[ 0  4 13 14] [ 4  9 11 13] 0 1\n"
+      "[ 1  9 11 12] [ 2  9 11 12] -1 0\n",
+      "[ 2  9 11 12] [ 2  5  8 12] -1 0\n",
+      "[ 2  5  8 12] [ 2  9 11 12] -1 0\n",
+      "[ 2  9 11 12] [ 1  9 11 12] -1 0\n",
+      "[ 1  9 11 12] [ 4  9 11 12] -1 0\n",
+      "[ 4  9 11 12] [4 5 7 9] -1 0\n",
+      "[4 5 7 9] [ 4  9 11 12] -1 0\n",
+      "[ 4  9 11 12] [4 5 7 9] -1 0\n",
+      "[4 5 7 9] [1 5 7 9] -1 0\n",
+      "[1 5 7 9] [4 5 7 9] -1 0\n",
+      "[4 5 7 9] [ 4  9 11 12] -1 0\n",
+      "[ 4  9 11 12] [4 5 7 9] -1 0\n",
+      "[4 5 7 9] [1 5 7 9] -1 0\n",
+      "[1 5 7 9] [2 5 7 9] -1 0\n",
+      "[2 5 7 9] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [0 2 5 8] -1 0\n",
+      "[0 2 5 8] [2 6 7 8] -1 0\n",
+      "[2 6 7 8] [2 5 7 9] -1 0\n",
+      "[2 5 7 9] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [ 0  1  9 11] -1 0\n",
+      "[ 0  1  9 11] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [ 0  1  9 11] -1 0\n",
+      "[ 0  1  9 11] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [2 5 7 9] -1 0\n",
+      "[2 5 7 9] [1 5 7 9] -1 0\n",
+      "[1 5 7 9] [4 5 7 9] -1 0\n",
+      "[4 5 7 9] [1 5 7 9] -1 0\n",
+      "[1 5 7 9] [2 5 7 9] -1 0\n",
+      "[2 5 7 9] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [ 0  1  9 11] -1 0\n",
+      "[ 0  1  9 11] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [ 0  1  9 11] -1 0\n",
+      "[ 0  1  9 11] [ 0  2  9 11] -1 0\n",
+      "[ 0  2  9 11] [2 5 7 9] -1 0\n",
+      "[2 5 7 9] [2 6 7 8] -1 0\n",
+      "[2 6 7 8] [1 6 7 8] -1 0\n",
+      "[1 6 7 8] [ 1  5  8 13] -1 0\n",
+      "[ 1  5  8 13] [ 4  5  8 13] -1 0\n",
+      "[ 4  5  8 13] [ 3  4 11 13] -1 0\n",
+      "[ 3  4 11 13] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [ 2  3 11 13] -1 0\n",
+      "[ 2  3 11 13] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [ 2  3 11 13] -1 0\n",
+      "[ 2  3 11 13] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [1 3 5 7] -1 0\n",
+      "[1 3 5 7] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [ 2  3 11 13] -1 0\n",
+      "[ 2  3 11 13] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [1 3 5 7] -1 0\n",
+      "[1 3 5 7] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [1 3 5 7] -1 0\n",
+      "[1 3 5 7] [3 4 5 7] -1 0\n",
+      "[3 4 5 7] [ 3  4 11 12] -1 0\n",
+      "[ 3  4 11 12] [ 1  3 11 12] -1 0\n",
+      "[ 1  3 11 12] [ 2  3 11 12] -1 0\n",
+      "[ 2  3 11 12] [ 1  3 11 12] -1 0\n",
+      "[ 1  3 11 12] [ 3  4 11 12] -1 0\n",
+      "[ 3  4 11 12] [ 4  5  8 12] -1 0\n",
+      "[ 4  5  8 12] [ 1  5  8 12] -1 0\n",
+      "[ 1  5  8 12] [ 2  5  8 12] -1 0\n",
+      "[ 2  5  8 12] [ 1  5  8 12] -1 0\n",
+      "[ 1  5  8 12] [ 4  5  8 12] -1 0\n",
+      "[ 4  5  8 12] [4 6 7 8] -1 0\n",
+      "[4 6 7 8] [1 6 7 8] -1 0\n",
+      "[1 6 7 8] [4 6 7 8] -1 0\n",
+      "[4 6 7 8] [3 4 5 7] -1 0\n",
+      "[3 4 5 7] [1 3 5 7] -1 0\n",
+      "[1 3 5 7] [3 4 5 7] -1 0\n",
+      "[3 4 5 7] [1 3 5 7] -1 0\n",
+      "[1 3 5 7] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [ 3  4 11 13] -1 0\n",
+      "[ 3  4 11 13] [ 4  5  8 13] -1 0\n",
+      "[ 4  5  8 13] [ 3  4 11 13] -1 0\n",
+      "[ 3  4 11 13] [ 1  3 11 13] -1 0\n",
+      "[ 1  3 11 13] [ 3  4 11 13] -1 0\n",
+      "[ 3  4 11 13] [ 4  5  8 13] -1 0\n",
+      "[ 4  5  8 13] [ 1  5  8 13] -1 0\n",
+      "[ 1  5  8 13] [ 4  5  8 13] -1 0\n",
+      "[ 4  5  8 13] [ 1  5  8 13] -1 0\n",
+      "[ 1  5  8 13] [ 1 10 11 13] 0 1\n"
      ]
     }
    ],
    "source": [
     "random_trajectory(env)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
