modded some pddls

--- a/pyperplan_tutorial.ipynb
+++ b/pyperplan_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "problem = _parse(domain_file='pddl_files/modded_transport/domain.pddl',\n",
-    "                 problem_file='pddl_files/modded_transport/ptest.pddl')"
+    "                 problem_file='pddl_files/modded_transport/ptest5.pddl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -36,19 +36,27 @@
       "text/plain": [
        "[capacity-predecessor[('capacity-0', capacity-number), ('capacity-1', capacity-number)],\n",
        " capacity-predecessor[('capacity-1', capacity-number), ('capacity-2', capacity-number)],\n",
-       " capacity-predecessor[('capacity-2', capacity-number), ('capacity-3', capacity-number)],\n",
-       " capacity-predecessor[('capacity-3', capacity-number), ('capacity-4', capacity-number)],\n",
        " road[('city-loc-3', location), ('city-loc-1', location)],\n",
        " road[('city-loc-1', location), ('city-loc-3', location)],\n",
        " road[('city-loc-2', location), ('city-loc-3', location)],\n",
        " road[('city-loc-3', location), ('city-loc-2', location)],\n",
+       " road[('city-loc-4', location), ('city-loc-3', location)],\n",
+       " road[('city-loc-3', location), ('city-loc-4', location)],\n",
+       " road[('city-loc-5', location), ('city-loc-1', location)],\n",
+       " road[('city-loc-1', location), ('city-loc-5', location)],\n",
+       " road[('city-loc-5', location), ('city-loc-3', location)],\n",
        " at[('package-1', package), ('city-loc-1', location)],\n",
        " at[('package-2', package), ('city-loc-2', location)],\n",
+       " at[('package-3', package), ('city-loc-4', location)],\n",
+       " at[('package-4', package), ('city-loc-1', location)],\n",
+       " at[('package-5', package), ('city-loc-2', location)],\n",
        " at[('truck-1', vehicle), ('city-loc-3', location)],\n",
-       " capacity[('truck-1', vehicle), ('capacity-4', capacity-number)]]"
+       " capacity[('truck-1', vehicle), ('capacity-2', capacity-number)],\n",
+       " at[('truck-2', vehicle), ('city-loc-1', location)],\n",
+       " capacity[('truck-2', vehicle), ('capacity-2', capacity-number)]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +76,7 @@
        "'transport-city-sequential-40nodes-1000size-4degree-100mindistance-4trucks-16packages-2008seed'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -88,9 +96,15 @@
        "{'city-loc-1': location,\n",
        " 'city-loc-2': location,\n",
        " 'city-loc-3': location,\n",
+       " 'city-loc-4': location,\n",
+       " 'city-loc-5': location,\n",
        " 'truck-1': vehicle,\n",
+       " 'truck-2': vehicle,\n",
        " 'package-1': package,\n",
        " 'package-2': package,\n",
+       " 'package-3': package,\n",
+       " 'package-4': package,\n",
+       " 'package-5': package,\n",
        " 'capacity-0': capacity-number,\n",
        " 'capacity-1': capacity-number,\n",
        " 'capacity-2': capacity-number,\n",
@@ -98,7 +112,7 @@
        " 'capacity-4': capacity-number}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,17 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[at[('package-1', (locatable,)), ('city-loc-3', (location,))],\n",
-       " at[('package-2', (locatable,)), ('city-loc-3', (location,))]]"
+       " at[('package-2', (locatable,)), ('city-loc-3', (location,))],\n",
+       " at[('package-3', (locatable,)), ('city-loc-5', (location,))],\n",
+       " at[('package-4', (locatable,)), ('city-loc-5', (location,))],\n",
+       " at[('package-5', (locatable,)), ('city-loc-5', (location,))]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +166,7 @@
        "[None, None, None, None]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Task transport-city-sequential-40nodes-1000size-4degree-100mindistance-4trucks-16packages-2008seed, vars: 16, operators: 52>"
+       "<Task transport-city-sequential-40nodes-1000size-4degree-100mindistance-4trucks-16packages-2008seed, vars: 51, operators: 218>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,42 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'(at package-1 city-loc-1)',\n",
-       " '(at package-1 city-loc-2)',\n",
-       " '(at package-1 city-loc-3)',\n",
-       " '(at package-1 truck-1)',\n",
-       " '(at package-2 city-loc-1)',\n",
-       " '(at package-2 city-loc-2)',\n",
-       " '(at package-2 city-loc-3)',\n",
-       " '(at package-2 truck-1)',\n",
-       " '(at truck-1 city-loc-1)',\n",
-       " '(at truck-1 city-loc-2)',\n",
-       " '(at truck-1 city-loc-3)',\n",
-       " '(capacity truck-1 capacity-0)',\n",
-       " '(capacity truck-1 capacity-1)',\n",
-       " '(capacity truck-1 capacity-2)',\n",
-       " '(capacity truck-1 capacity-3)',\n",
-       " '(capacity truck-1 capacity-4)'}"
+       "51"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "task.facts"
+    "len(task.facts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -248,11 +250,16 @@
       "text/plain": [
        "frozenset({'(at package-1 city-loc-1)',\n",
        "           '(at package-2 city-loc-2)',\n",
+       "           '(at package-3 city-loc-4)',\n",
+       "           '(at package-4 city-loc-1)',\n",
+       "           '(at package-5 city-loc-2)',\n",
        "           '(at truck-1 city-loc-3)',\n",
-       "           '(capacity truck-1 capacity-4)'})"
+       "           '(at truck-2 city-loc-1)',\n",
+       "           '(capacity truck-1 capacity-2)',\n",
+       "           '(capacity truck-2 capacity-2)'})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,16 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "frozenset({'(at package-1 city-loc-3)', '(at package-2 city-loc-3)'})"
+       "frozenset({'(at package-1 city-loc-3)',\n",
+       "           '(at package-2 city-loc-3)',\n",
+       "           '(at package-3 city-loc-5)',\n",
+       "           '(at package-4 city-loc-5)',\n",
+       "           '(at package-5 city-loc-5)'})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +303,7 @@
        "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
